--- a/app/src/main/res/layout/activity_card_details.xml
+++ b/app/src/main/res/layout/activity_card_details.xml
@@ -1,9 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.google.developer.colorvalue.CardDetailsActivity">
 
-</android.support.constraint.ConstraintLayout>
+<android.support.constraint.ConstraintLayout
+    tools:context="com.google.developer.colorvalue.CardDetailsActivity"
+    android:id="@+id/constraint_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="30dp">
+
+        <com.google.developer.colorvalue.ui.ColorView
+            android:id="@+id/card_details_color_view"
+            android:layout_width="match_parent"
+            android:layout_height="260dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:background="@color/colorAccent"
+            app:show_text="false"/>
+
+
+        <TextView
+            android:id="@+id/card_details_color_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="30dp"
+            android:textSize="40sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintEnd_toEndOf="@+id/card_details_color_view"
+            app:layout_constraintStart_toStartOf="@+id/card_details_color_view"
+            app:layout_constraintTop_toBottomOf="@+id/card_details_color_view"
+            tools:text="Yellow" />
+
+        <TextView
+            android:id="@+id/card_details_color_hex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="40dp"
+            tools:text="#00F234"
+            app:layout_constraintEnd_toEndOf="@+id/card_details_color_name"
+            app:layout_constraintStart_toStartOf="@+id/card_details_color_name"
+            app:layout_constraintTop_toBottomOf="@+id/card_details_color_name" />
+
+    </android.support.constraint.ConstraintLayout>
+
+
+</ScrollView>
