--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -34,9 +34,10 @@
             android:id="@+id/seek_red"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/seek_red_margin_start"
+            android:layout_marginTop="@dimen/seek_red_margin_top"
             android:max="255"
+            android:contentDescription="@string/seek_red_content_description"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/text_red"
             app:layout_constraintTop_toBottomOf="@+id/color" />
