--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,4 +18,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_empty_text"
+        android:gravity="center"
+        android:text="@string/activity_main_empty_text"
+        android:textSize="@dimen/recycler_empty_text_size"
+        android:visibility="invisible"
+        />
+
 </RelativeLayout>
